Current forecast feature added

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,6 +3,8 @@
     <head>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
         <link rel="stylesheet" href="css/styles.css">
         {{!-- <link rel="icon" href="/img/weather.png"> --}}
@@ -31,10 +33,10 @@
           </div>
           <div class="col-sm-8">
             <h5>Created on, May 7, 2020</h5>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <p>The weatherlikenever website presents official weather observations and weather forecasts for selected cities supplies by MaxBox corporation APIs</p>
+            <p>The Geocoding services used in the site is provided by api.mapbox.com which is open source and accesible to individual provide various coordinates based on location.</p>
+            <p>The forecast provided to the site is supplied by openweather corporation which is referenced through openweather APIs</p>
+            <p>Stay up-to-date on the current weather conditions for your farm, including the temperature, wind speed, and visibility.</p>
           </div>
         </div>
         </div>
