--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -16,7 +16,7 @@
               <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="help">Help</a>
+              <a class="nav-link" href="/help">Help</a>
             </li>    
           </ul>
         </div>  
