--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -3,6 +3,9 @@
     <head>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
 
         <link rel="stylesheet" href="css/styles.css">
         {{!-- <link rel="icon" href="/img/weather.png"> --}}
@@ -18,6 +21,88 @@
         <div>{{>nav}}</div>
 
         <p>{{description}}</p>
+        <div class="jumbotron bg-white text-center" style="margin-bottom:0">
+            <h1>FAQs</h1>
+        </div> 
+
+        <div class="container py-3">
+    <div class="row">
+        <div class="col-10 mx-auto">
+            <div class="accordion" id="faqExample">
+                <div class="card">
+                    <div class="card-header p-2" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link text-secondary" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              <b>+ Days</b>
+                            </button>
+                          </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#faqExample">
+                        <div class="card-body">
+                            <ul>
+                                <li>The day time forecast is from either the current time (if you are looking at the current day) or sunrise (for future days) to sunset. The night forecast is from sunset to sunrise.
+                                <li>For the current day what is displayed in the blue bar is temperature highs/lows and amount of precipitation for the rest of the day.</li>
+</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header p-2" id="headingTwo">
+                        <h5 class="mb-0">
+                        <button class="btn btn-link collapsed text-secondary" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          <b>+ Weather Update</b>
+                        </button>
+                      </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#faqExample">
+                        <div class="card-body">
+                            The minute product updates every 15 minutes world wide, the overall forecast is updated every hour world wide.
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header p-2" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed text-secondary" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <b>+ Weather Inaccurate</b>
+                            </button>
+                          </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#faqExample">
+                        <div class="card-body">
+                            <ul>
+                                <li>If your network is spotty the app may display the data that it has cached including yesterday's forecast. This is so that you can still see the upcoming forecast. It may continue to show yesterday's forecast when the network connection is better. To force it to refresh go into Settings, Technical Settings (scroll down if necessary) and Clear Cache.</li>
+                                <li>If you are still having issues u can contact us anytime</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header p-2 " id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed text-secondary" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                             <b>+ Partly Cloudy vs Partly Sunny</b>
+                            </button>
+                          </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#faqExample">
+                        <div class="card-body">
+                            <ul>
+                                <li>Partly Cloudy is defined when 30-70% of the sky is covered in clouds. Used more frequently at night. </li>
+                                <li>Partly Sunny is similar but used more frequently during the day since there is some sunshine.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!--/row-->
+</div>
+<!--container-->
         
         <div class="mb-3 ml-3 pl-3">
             <p >{{>footer}}</p>
